# IaaC-Pulumi

./: .env.example  .gitignore  01-server-setup.sh  02-github-runner-setup.sh  CHANGELOG.md  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.qa.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
config/: __init__.py  settings.py
docs/: ARCHITECTURE.md
infra/: __init__.py
infra/compute/: __init__.py
infra/core/: __init__.py  naming.py  resource_group.py  stack.py  tags.py
infra/database/: __init__.py
infra/etl/: __init__.py
infra/frontend/: __init__.py
infra/functions/: __init__.py
infra/gateway/: __init__.py
infra/messaging/: __init__.py
infra/microservices/: __init__.py
infra/monitoring/: __init__.py  app_insights.py  log_analytics.py  stack.py
infra/networking/: __init__.py  nsg.py  stack.py  vnet.py
infra/observability/: __init__.py
infra/security/: __init__.py  keyvault.py  managed_identity.py  stack.py
infra/storage/: __init__.py  stack.py  storage_account.py
policies/: PulumiPolicy.yaml  __init__.py  security_policies.py
scripts/: deploy.sh  pulumi.sh  validate.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: test_naming.py  test_tags.py
